relying a bit too much on the style feature in html so i'm fixing that up a bit

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4550,7 +4550,8 @@ textarea.form-control-lg {
   word-wrap: break-word;
   background-color: var(--bs-card-bg);
   background-clip: border-box;
-  border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+  /*border: var(--bs-card-border-width) solid var(--bs-card-border-color);*/
+  border: var(--bs-card-border-width) solid red;;
   border-radius: var(--bs-card-border-radius);
 }
 .card > hr {
@@ -4585,12 +4586,18 @@ textarea.form-control-lg {
 .card-title {
   margin-bottom: var(--bs-card-title-spacer-y);
   color: var(--bs-card-title-color);
+  font-weight: 700; 
+  text-align: left;
 }
 
 .card-subtitle {
   margin-top: calc(-0.5 * var(--bs-card-title-spacer-y));
   margin-bottom: 0;
   color: var(--bs-card-subtitle-color);
+}
+
+.card-text {
+  text-align: left;
 }
 
 .card-text:last-child {
@@ -4652,6 +4659,9 @@ textarea.form-control-lg {
 .card-img-top,
 .card-img-bottom {
   width: 100%;
+
+height: calc((100%/16) * 9);
+object-fit: cover;
 }
 
 .card-img,
